src/objects/CSM_E2C_CaseTags__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>CSM-1463 E2C specific tags in email body</description>
    <fields>
        <fullName>Field_API__c</fullName>
        <description>CSM-1463 E2C specific tags in email body</description>
        <label>Field API</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Label__c</fullName>
        <description>CSM-1463 E2C specific tags in email body</description>
        <label>Field Label</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeNames__c</fullName>
        <description>CSM-1463 E2C specific tags in email body</description>
        <inlineHelpText>Multiple record type should be separated by comma(,)</inlineHelpText>
        <label>RecordTypeNames</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CSM E2C CaseTags</label>
</CustomObject>